# dp_aero_L2

./: .gitignore  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  CHANGES_FOR_SECOND_DEMO.md  CLEANUP_SUMMARY.md  CMakeLists.txt  COMPREHENSIVE_RACE_CONDITION_ANALYSIS.md  MODERN_CPP_OPTIMIZATIONS.md  RACE_CONDITIONS_FINAL_REPORT.md  RACE_CONDITIONS_MEMORY_ANALYSIS.md  RACE_CONDITION_FIXES_SUMMARY.md  README.md  README_REDIS.md  STRATEGY_ARCHITECTURE_SUMMARY.md  TEST_SCENARIO.md  THREAD_SAFETY_FIX.md  THREAD_SYNCHRONIZATION_ANALYSIS.md  UNIT_TESTING_STRATEGY.md  run_component.sh  test_scenario.sh
examples/: strategy_demo.cpp
include/: algorithm_framework.h  algorithm_strategies.h  l2_fusion_manager.h  redis_utils.h  strategy_based_fusion_algorithm.h  target.h  task_manager.h
include/algorithms/: target_tracking_algorithm.h
proto/common/: gimbal_position.proto  node_identity.proto  timestamp.proto
proto/data_streams/: sensor_data.proto
proto/messages/: l1_to_l2.proto  l2_to_l1.proto
src/: algorithm_framework.cpp  algorithm_strategies.cpp  l1_node_simulator.cpp  l2_fusion_system.cpp  redis_publisher.cpp  redis_stream_example.cpp  redis_subscriber.cpp  task_manager.cpp
tests/: CMakeLists.txt
tests/fixtures/: test_data_factory.h
tests/unit/framework/: test_algorithm_context.cpp  test_algorithm_context_simple.cpp  test_fusion_algorithm.cpp  test_task_manager.cpp  test_task_manager_clean.cpp
tests/unit/strategies/: test_confidence_prioritizer.cpp  test_device_assignment.cpp  test_threat_prioritizer.cpp
